--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,8 @@ djangorestframework==3.15.2
 
 mysqlclient==2.2.4
 
+drf-yasg==1.21.6
+
 django-environ==0.11.2
 django-cors-headers==4.6.0
-
 djangorestframework-simplejwt==5.3.1
